--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -1,7 +1,18 @@
 [project]
 name = "server"
 version = "0.1.0"
-description = "Add your description here"
+description = "FastAPI authentication server with PostgreSQL"
 readme = "README.md"
 requires-python = ">=3.8"
-dependencies = []
+dependencies = [
+    "fastapi>=0.104.0",
+    "uvicorn[standard]>=0.24.0",
+    "sqlalchemy>=2.0.0",
+    "psycopg2-binary>=2.9.0",
+    "alembic>=1.12.0",
+    "passlib[bcrypt]>=1.7.4",
+    "python-jose[cryptography]>=3.3.0",
+    "python-multipart>=0.0.6",
+    "pydantic>=2.5.0",
+    "pydantic-settings>=2.1.0",
+]
