--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "psycopg2-binary>=2.9.0",
     "alembic>=1.12.0",
     "passlib[bcrypt]>=1.7.4",
+    "bcrypt>=4.0.0",
     "python-jose[cryptography]>=3.3.0",
     "python-multipart>=0.0.6",
     "pydantic>=2.5.0",
