--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -16,4 +16,11 @@ dependencies = [
     "python-multipart>=0.0.6",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
+    "pypdf2>=3.0.1",
+    "langchain>=0.3.27",
+    "langchain-community>=0.3.29",
+    "qdrant-client>=1.15.1",
+    "crewai>=0.177.0",
+    "crewai-tools>=0.69.0",
+    "ollama>=0.5.3",
 ]
