--- a/server/.gitignore
+++ b/server/.gitignore
@@ -34,6 +34,18 @@ env/
 # Database
 *.db
 *.sqlite3
+iic_auth.db
+db/
+
+# Test files
+test_*.py
+
+# ChromaDB
+chroma.sqlite3
+
+# Lock files
+crewai-rag-tool.lock
+uv.lock
 
 # IDE
 .vscode/
