--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -19,8 +19,12 @@ dependencies = [
     "pypdf2>=3.0.1",
     "langchain>=0.3.27",
     "langchain-community>=0.3.29",
-    "qdrant-client>=1.15.1",
+    "chromadb>=0.5.0",
     "crewai>=0.177.0",
     "crewai-tools>=0.69.0",
     "ollama>=0.5.3",
+    "pylance>=0.35.0",
+    "langchain-core>=0.3.75",
+    "pandas>=2.0.0",
+    "requests>=2.32.5",
 ]
